k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: buildmart
  labels:
    app.kubernetes.io/part-of: m-and-p
